--- a/LoginApiSpringBoot/src/main/resources/application.properties
+++ b/LoginApiSpringBoot/src/main/resources/application.properties
@@ -28,8 +28,8 @@ app.jwtExpirationInMs = 604800000
 ## Email Properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=username
-spring.mail.password=password
+spring.mail.username=thiendeveloper@gmail.com
+spring.mail.password=ngunguoi
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
